@@ -12,7 +12,7 @@ print_files = \
 	paginate_psprint.c \
 	paginate_psprint.h
 
-noinst_PROGRAMS = run_dia.sh run_diaconv.sh diaconv
+noinst_PROGRAMS = run_dia.sh #run_diaconv.sh diaconv
 run_dia_sh_SOURCES = 
 run_diaconv_sh_SOURCES = 
 
