@@ -1,3 +1,10 @@
+2002-06-22  Lars Clausen  <lrclause@cs.uiuc.edu>
+
+	* lib/widgets.c: 
+	* app/render_gdk.c: Patch from Hans Breuer.
+
+	* app/Makefile.am (dia_core_files): diaconv commented out for now.
+	
 2002-06-22  Cyrille Chepelov  <cyrille@chepelov.org>
 
 	* lib/all files touched yesterday: took into account some of Hans
